# SRU

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  config.h  main.cpp  reference.json  schema.json
CMake/Modules/: FindRE2.cmake  Findre2.cmake
src/pdf/: anchor_config.h  calc_config.cpp  calc_config.h  global_settings.cpp  global_settings.h  object_config.cpp  object_config.h  pdf_cluster.cpp  pdf_cluster.h  pdf_file.cpp  pdf_file.h  pdf_page.cpp  pdf_page.h  string_obj.cpp  string_obj.h
src/pdf_structures/: anchor_config.cpp  anchor_config.h  object_config.cpp  object_config.h  page_config.cpp  page_config.h  pdf_cluster.cpp  pdf_cluster.h  pdf_file.cpp  pdf_file.h  pdf_page.cpp  pdf_page.h  string_obj.cpp  string_obj.h
src/util/: fc.h  fmt.h  pdf2dcm.cpp  pdf2dcm.h  qpdf_binding.cpp  qpdf_binding.h  re_accel.cpp  re_accel.h  regex.cpp  regex.h  util.cpp  util.h
src/util/regexs/: r0.cpp  r1.cpp  r10.cpp  r11.cpp  r12.cpp  r13.cpp  r14.cpp  r15.cpp  r16.cpp  r17.cpp  r18.cpp  r19.cpp  r2.cpp  r20.cpp  r21.cpp  r22.cpp  r23.cpp  r24.cpp  r25.cpp  r26.cpp  r27.cpp  r28.cpp  r29.cpp  r3.cpp  r30.cpp  r31.cpp  r32.cpp  r33.cpp  r34.cpp  r35.cpp  r36.cpp  r37.cpp  r38.cpp  r39.cpp  r4.cpp  r40.cpp  r41.cpp  r42.cpp  r43.cpp  r44.cpp  (+27 more)
